--- a/client/i18n/lang/en.json
+++ b/client/i18n/lang/en.json
@@ -44,8 +44,8 @@
             "amount_to_pay": "Amount to pay",
             "success": "Payment successful",
             "name_on_card": "Name on card",
-            "billing_email": "Billing email address"
-        },
-        "payment_disclaimer": "Your credit card will be charged upon clicking this button. Payments are securely processed through Stripe."
+            "billing_email": "Billing email address",
+            "payment_disclaimer": "Your credit card will be charged upon clicking this button. Payments are securely processed through Stripe."
+        }
     }
 } 
