--- a/client/i18n/lang/hi.json
+++ b/client/i18n/lang/hi.json
@@ -44,7 +44,8 @@
             "amount_to_pay": "भुगतान करने की राशि",
             "success": "भुगतान सफल",
             "name_on_card": "कार्ड पर नाम",
-            "billing_email": "बिलिंग ईमेल पता"
+            "billing_email": "बिलिंग ईमेल पता",
+            "payment_disclaimer": "इस बटन पर क्लिक करने पर आपकी क्रेडिट कार्ड से शुल्क लिया जाएगा। भुगतान Stripe के माध्यम से सुरक्षित रूप से संसाधित किए जाते हैं।"
         }
     }
 } 
