--- a/client/i18n/lang/jv.json
+++ b/client/i18n/lang/jv.json
@@ -41,10 +41,11 @@
             "clickToOpenCamera": "Klik kanggo nggawe kamera"
         },
         "payment": {
-            "amount_to_pay": "Jumlah yang harus dibayar",
-            "success": "Pembayaran berhasil",
-            "name_on_card": "Nama di kartu",
-            "billing_email": "Alamat email penagihan"
+            "amount_to_pay": "Jumlah sing kudu dibayar",
+            "success": "Pembayaran kasil",
+            "name_on_card": "Jeneng ing kertu",
+            "billing_email": "Alamat email tagihan",
+            "payment_disclaimer": "Kertu kredit sampeyan bakal diisi nalika ngeklik tombol iki. Pembayaran diproses kanthi aman liwat Stripe."
         }
     }
 } 
