--- a/client/i18n/lang/mr.json
+++ b/client/i18n/lang/mr.json
@@ -44,7 +44,8 @@
             "amount_to_pay": "भुगतान करण्यासाठी रक्कम",
             "success": "भुगतान सफल",
             "name_on_card": "कार्डचे नाव",
-            "billing_email": "बिलिंग ईमेल पत्ता"
+            "billing_email": "बिलिंग ईमेल पत्ता",
+            "payment_disclaimer": "या बटणावर क्लिक केल्यावर तुमच्या क्रेडिट कार्डवरून शुल्क आकारले जाईल. देयके Stripe द्वारे सुरक्षितपणे प्रक्रिया केली जातात."
         }
     }
 } 
