--- a/client/i18n/lang/pa.json
+++ b/client/i18n/lang/pa.json
@@ -44,7 +44,8 @@
             "amount_to_pay": "ਭੁਗਤਾਨ ਕਰਨ ਲਈ ਰਕਮ",
             "success": "ਭੁਗਤਾਨ ਸਫਲ",
             "name_on_card": "ਕਾਰਡ ਦਾ ਨਾਮ",
-            "billing_email": "ਬਿਲਿੰਗ ਈਮੇਲ ਪਤਾ"
+            "billing_email": "ਬਿਲਿੰਗ ਈਮੇਲ ਪਤਾ",
+            "payment_disclaimer": "ਇਸ ਬਟਨ 'ਤੇ ਕਲਿੱਕ ਕਰਨ 'ਤੇ ਤੁਹਾਡੇ ਕ੍ਰੈਡਿਟ ਕਾਰਡ ਤੋਂ ਚਾਰਜ ਲਿਆ ਜਾਵੇਗਾ। ਭੁਗਤਾਨ Stripe ਦੁਆਰਾ ਸੁਰੱਖਿਅਤ ਢੰਗ ਨਾਲ ਸੰਸਾਧਿਤ ਕੀਤੇ ਜਾਂਦੇ ਹਨ।"
         }
     }
 } 
