--- a/client/i18n/lang/ur.json
+++ b/client/i18n/lang/ur.json
@@ -41,10 +41,11 @@
             "clickToOpenCamera": "کیمرے کھولنے کے لیے کلک کریں"
         },
         "payment": {
-            "amount_to_pay": "پہلو کرنے کی رقم",
-            "success": "پہلو کرنا موفق",
+            "amount_to_pay": "ادا کرنے کی رقم",
+            "success": "ادائیگی کامیاب",
             "name_on_card": "کارڈ پر نام",
-            "billing_email": "بلندی کی ای میل ادرس"
+            "billing_email": "بلنگ ای میل ایڈریس",
+            "payment_disclaimer": "اس بٹن پر کلک کرنے پر آپ کے کریڈٹ کارڈ سے چارج کیا جائے گا۔ ادائیگیاں Stripe کے ذریعے محفوظ طریقے سے عمل میں لائی جاتی ہیں۔"
         }
     }
 } 
