--- a/client/i18n/lang/zh.json
+++ b/client/i18n/lang/zh.json
@@ -44,7 +44,8 @@
             "amount_to_pay": "支付金额",
             "success": "支付成功",
             "name_on_card": "卡上姓名",
-            "billing_email": "账单电子邮件地址"
+            "billing_email": "账单电子邮件地址",
+            "payment_disclaimer": "点击此按钮将从您的信用卡中扣款。付款通过 Stripe 安全处理。"
         }
     }
 } 
