--- a/client/i18n/lang/cs.json
+++ b/client/i18n/lang/cs.json
@@ -45,7 +45,21 @@
             "success": "Platba úspěšná",
             "name_on_card": "Jméno na kartě",
             "billing_email": "Fakturační e-mailová adresa",
-            "payment_disclaimer": "Vaše kreditní karta bude stržena po kliknutí na toto tlačítko. Platby jsou bezpečně zpracovávány prostřednictvím Stripe."
+            "payment_disclaimer": "Vaše kreditní karta bude zatížena kliknutím na toto tlačítko. Platby jsou bezpečně zpracovány prostřednictvím Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
