--- a/client/i18n/lang/es.json
+++ b/client/i18n/lang/es.json
@@ -42,10 +42,24 @@
         },
         "payment": {
             "amount_to_pay": "Cantidad a pagar",
-            "success": "Pago exitoso",
+            "success": "Pago realizado con éxito",
             "name_on_card": "Nombre en la tarjeta",
-            "billing_email": "Dirección de correo electrónico de facturación",
-            "payment_disclaimer": "Your credit card will be charged upon clicking this button. Payments are securely processed through Stripe."
+            "billing_email": "Correo electrónico de facturación",
+            "payment_disclaimer": "Se cargará a su tarjeta de crédito al hacer clic en este botón. Los pagos se procesan de forma segura a través de Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
