--- a/client/i18n/lang/eu.json
+++ b/client/i18n/lang/eu.json
@@ -41,11 +41,25 @@
             "clickToOpenCamera": "Egin klik kamera irekitzeko"
         },
         "payment": {
-            "amount_to_pay": "Ordaintzeko zenbatekoa",
+            "amount_to_pay": "Ordaindu beharreko zenbatekoa",
             "success": "Ordainketa arrakastatsua",
-            "name_on_card": "Txarteleko izena",
-            "billing_email": "Fakturazio helbide elektronikoa",
-            "payment_disclaimer": "Zure kreditu-txartela kargatuko da botoi honetan klik egitean. Ordainketak modu seguruan prozesatzen dira Stripe bidez."
+            "name_on_card": "Txartelaren izena",
+            "billing_email": "Fakturazio-helbide elektronikoa",
+            "payment_disclaimer": "Zure kreditu txartela kargatuko da botoi honetan klik egitean. Ordainketak Stripe bidez prozesatzen dira modu seguruan.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
