--- a/client/i18n/lang/ko.json
+++ b/client/i18n/lang/ko.json
@@ -43,9 +43,23 @@
         "payment": {
             "amount_to_pay": "결제 금액",
             "success": "결제 성공",
-            "name_on_card": "카드 이름",
+            "name_on_card": "카드 소유자 이름",
             "billing_email": "청구 이메일 주소",
-            "payment_disclaimer": "이 버튼을 클릭하면 신용카드로 결제됩니다. 결제는 Stripe를 통해 안전하게 처리됩니다."
+            "payment_disclaimer": "이 버튼을 클릭하면 신용카드로 청구됩니다. 결제는 Stripe를 통해 안전하게 처리됩니다.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
