--- a/client/i18n/lang/pa.json
+++ b/client/i18n/lang/pa.json
@@ -41,11 +41,25 @@
             "clickToOpenCamera": "ਕਲਿੱਕ ਕਰੋ ਕੈਮਰਾ ਖੋਲਣ ਲਈ"
         },
         "payment": {
-            "amount_to_pay": "ਭੁਗਤਾਨ ਕਰਨ ਲਈ ਰਕਮ",
+            "amount_to_pay": "ਭੁਗਤਾਨ ਕਰਨ ਦੀ ਰਕਮ",
             "success": "ਭੁਗਤਾਨ ਸਫਲ",
-            "name_on_card": "ਕਾਰਡ ਦਾ ਨਾਮ",
+            "name_on_card": "ਕਾਰਡ 'ਤੇ ਨਾਮ",
             "billing_email": "ਬਿਲਿੰਗ ਈਮੇਲ ਪਤਾ",
-            "payment_disclaimer": "ਇਸ ਬਟਨ 'ਤੇ ਕਲਿੱਕ ਕਰਨ 'ਤੇ ਤੁਹਾਡੇ ਕ੍ਰੈਡਿਟ ਕਾਰਡ ਤੋਂ ਚਾਰਜ ਲਿਆ ਜਾਵੇਗਾ। ਭੁਗਤਾਨ Stripe ਦੁਆਰਾ ਸੁਰੱਖਿਅਤ ਢੰਗ ਨਾਲ ਸੰਸਾਧਿਤ ਕੀਤੇ ਜਾਂਦੇ ਹਨ।"
+            "payment_disclaimer": "ਇਸ ਬਟਨ 'ਤੇ ਕਲਿੱਕ ਕਰਨ 'ਤੇ ਤੁਹਾਡੇ ਕ੍ਰੈਡਿਟ ਕਾਰਡ ਤੋਂ ਚਾਰਜ ਲਿਆ ਜਾਵੇਗਾ। ਭੁਗਤਾਨ Stripe ਰਾਹੀਂ ਸੁਰੱਖਿਅਤ ਢੰਗ ਨਾਲ ਪ੍ਰੋਸੈਸ ਕੀਤੇ ਜਾਂਦੇ ਹਨ।",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
