--- a/client/i18n/lang/pt.json
+++ b/client/i18n/lang/pt.json
@@ -41,11 +41,25 @@
             "clickToOpenCamera": "Clique para abrir a câmera"
         },
         "payment": {
-            "amount_to_pay": "Valor a ser pago",
-            "success": "Pagamento realizado com sucesso",
+            "amount_to_pay": "Valor a pagar",
+            "success": "Pagamento bem-sucedido",
             "name_on_card": "Nome no cartão",
-            "billing_email": "Endereço de e-mail de faturamento",
-            "payment_disclaimer": "Seu cartão de crédito será cobrado ao clicar neste botão. Os pagamentos são processados com segurança pelo Stripe."
+            "billing_email": "Endereço de e-mail para faturação",
+            "payment_disclaimer": "Seu cartão de crédito será cobrado ao clicar neste botão. Os pagamentos são processados ​​com segurança através do Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
