--- a/client/i18n/lang/ru.json
+++ b/client/i18n/lang/ru.json
@@ -45,7 +45,21 @@
             "success": "Оплата прошла успешно",
             "name_on_card": "Имя на карте",
             "billing_email": "Адрес электронной почты для выставления счетов",
-            "payment_disclaimer": "С вашей кредитной карты будет снята плата после нажатия этой кнопки. Платежи безопасно обрабатываются через Stripe."
+            "payment_disclaimer": "С вашей кредитной карты будет снята сумма при нажатии на эту кнопку. Платежи безопасно обрабатываются через Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
