--- a/client/i18n/lang/sk.json
+++ b/client/i18n/lang/sk.json
@@ -41,11 +41,25 @@
             "clickToOpenCamera": "Kliknite pre otvorenie kamery"
         },
         "payment": {
-            "amount_to_pay": "Čiastka na zaplatenie",
+            "amount_to_pay": "Suma na zaplatenie",
             "success": "Platba úspešná",
             "name_on_card": "Meno na karte",
             "billing_email": "Fakturačná e-mailová adresa",
-            "payment_disclaimer": "Vaša kreditná karta bude zaúčtovaná po kliknutí na toto tlačidlo. Platby sú bezpečne spracované prostredníctvom Stripe."
+            "payment_disclaimer": "Vaša kreditná karta bude zaťažená kliknutím na toto tlačidlo. Platby sú bezpečne spracované prostredníctvom Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 }
