--- a/client/i18n/lang/sv.json
+++ b/client/i18n/lang/sv.json
@@ -43,9 +43,23 @@
         "payment": {
             "amount_to_pay": "Belopp att betala",
             "success": "Betalning lyckades",
-            "name_on_card": "Namn på kortet",
+            "name_on_card": "Namn på kort",
             "billing_email": "Fakturerings-e-postadress",
-            "payment_disclaimer": "Ditt kreditkort kommer att debiteras när du klickar på den här knappen. Betalningar behandlas säkert via Stripe."
+            "payment_disclaimer": "Ditt kreditkort kommer att debiteras när du klickar på den här knappen. Betalningar behandlas säkert via Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
