--- a/client/i18n/lang/ta.json
+++ b/client/i18n/lang/ta.json
@@ -41,11 +41,25 @@
             "clickToOpenCamera": "கிளிக் செய்யவும் கேமரா திறக்கவும்"
         },
         "payment": {
-            "amount_to_pay": "பதிவேற்றப்பட வேண்டிய தொகை",
-            "success": "பதிவேற்றம் வெற்றிகரமானது",
-            "name_on_card": "கார்டின் பெயர்",
+            "amount_to_pay": "செலுத்த வேண்டிய தொகை",
+            "success": "பணம் செலுத்துதல் வெற்றி",
+            "name_on_card": "கார்டில் உள்ள பெயர்",
             "billing_email": "பில்லிங் மின்னஞ்சல் முகவரி",
-            "payment_disclaimer": "இந்தப் பொத்தானைக் கிளிக் செய்தால் உங்கள் கிரெடிட் கார்டில் கட்டணம் வசூலிக்கப்படும். பணம் செலுத்துதல்கள் Stripe மூலம் பாதுகாப்பாக செயலாக்கப்படுகின்றன."
+            "payment_disclaimer": "இந்த பொத்தானைக் கிளிக் செய்யும் போது உங்கள் கிரெடிட் கார்டில் கட்டணம் வசூலிக்கப்படும். பணம் செலுத்துதல்கள் பாதுகாப்பாக Stripe மூலம் செயலாக்கப்படுகின்றன.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
