--- a/client/i18n/lang/te.json
+++ b/client/i18n/lang/te.json
@@ -41,11 +41,25 @@
             "clickToOpenCamera": "క్లిక్ చేయండి కెమెరా తెరవండి"
         },
         "payment": {
-            "amount_to_pay": "చెల్లించాల్సిన మొత్తం",
+            "amount_to_pay": "చెల్లించవలసిన మొత్తం",
             "success": "చెల్లింపు విజయవంతమైంది",
             "name_on_card": "కార్డుపై పేరు",
             "billing_email": "బిల్లింగ్ ఇమెయిల్ చిరునామా",
-            "payment_disclaimer": "ఈ బటన్‌పై క్లిక్ చేసినప్పుడు మీ క్రెడిట్ కార్డ్‌కు ఛార్జ్ చేయబడుతుంది. చెల్లింపులు Stripe ద్వారా సురక్షితంగా ప్రాసెస్ చేయబడతాయి."
+            "payment_disclaimer": "ఈ బటన్‌ను క్లిక్ చేసినప్పుడు మీ క్రెడిట్ కార్డ్‌కు ఛార్జీ విధించబడుతుంది. చెల్లింపులు Stripe ద్వారా సురక్షితంగా ప్రాసెస్ చేయబడతాయి.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
