--- a/client/i18n/lang/ur.json
+++ b/client/i18n/lang/ur.json
@@ -45,7 +45,21 @@
             "success": "ادائیگی کامیاب",
             "name_on_card": "کارڈ پر نام",
             "billing_email": "بلنگ ای میل ایڈریس",
-            "payment_disclaimer": "اس بٹن پر کلک کرنے پر آپ کے کریڈٹ کارڈ سے چارج کیا جائے گا۔ ادائیگیاں Stripe کے ذریعے محفوظ طریقے سے عمل میں لائی جاتی ہیں۔"
+            "payment_disclaimer": "اس بٹن پر کلک کرنے پر آپ کے کریڈٹ کارڈ سے چارج کیا جائے گا۔ ادائیگیوں پر Stripe کے ذریعے محفوظ طریقے سے کارروائی کی جاتی ہے۔",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
