--- a/client/i18n/lang/ar.json
+++ b/client/i18n/lang/ar.json
@@ -39,6 +39,27 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "انقر لفتح كاميرا"
+        },
+        "payment": {
+            "amount_to_pay": "المبلغ للدفع",
+            "success": "تم الدفع بنجاح",
+            "name_on_card": "الاسم على البطاقة",
+            "billing_email": "عنوان البريد الإلكتروني للفوترة",
+            "payment_disclaimer": "سيتم خصم المبلغ من بطاقتك الائتمانية عند النقر على هذا الزر. تتم معالجة المدفوعات بشكل آمن من خلال Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
