--- a/client/i18n/lang/ca.json
+++ b/client/i18n/lang/ca.json
@@ -39,6 +39,27 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "Fes clic per obrir la càmera"
+        },
+        "payment": {
+            "amount_to_pay": "Quantitat a pagar",
+            "success": "Pagament realitzat amb èxit",
+            "name_on_card": "Nom a la targeta",
+            "billing_email": "Adreça de correu electrònic de facturació",
+            "payment_disclaimer": "Se us cobrarà a la targeta de crèdit en fer clic en aquest botó. Els pagaments es processen de forma segura a través de Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
