--- a/client/i18n/lang/de.json
+++ b/client/i18n/lang/de.json
@@ -38,7 +38,28 @@
             "clear": "Löschen"
         },
         "barcodeInput": {
-            "clickToOpenCamera": "Klicken Sie, um eine Kamera zu öffnen"
+            "clickToOpenCamera": "Klicken Sie hier, um die Kamera zu öffnen"
+        },
+        "payment": {
+            "amount_to_pay": "Zu zahlender Betrag",
+            "success": "Zahlung erfolgreich",
+            "name_on_card": "Name auf Karte",
+            "billing_email": "Rechnungs-E-Mail-Adresse",
+            "payment_disclaimer": "Ihre Kreditkarte wird belastet, wenn Sie auf diesen Button klicken. Zahlungen werden sicher über Stripe abgewickelt.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
