--- a/client/i18n/lang/fr.json
+++ b/client/i18n/lang/fr.json
@@ -38,7 +38,28 @@
             "clear": "Effacer"
         },
         "barcodeInput": {
-            "clickToOpenCamera": "Cliquez pour ouvrir une caméra"
+            "clickToOpenCamera": "Cliquez pour ouvrir la caméra"
+        },
+        "payment": {
+            "amount_to_pay": "Montant à payer",
+            "success": "Paiement réussi",
+            "name_on_card": "Nom sur la carte",
+            "billing_email": "Adresse e-mail de facturation",
+            "payment_disclaimer": "Votre carte de crédit sera débitée lorsque vous cliquerez sur ce bouton. Les paiements sont traités en toute sécurité via Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 }
