--- a/client/i18n/lang/gl.json
+++ b/client/i18n/lang/gl.json
@@ -39,6 +39,27 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "Fai clic para abrir a cámara"
+        },
+        "payment": {
+            "amount_to_pay": "Cantidade a pagar",
+            "success": "Pago realizado con éxito",
+            "name_on_card": "Nome na tarxeta",
+            "billing_email": "Enderezo de correo electrónico de facturación",
+            "payment_disclaimer": "Cobrarase na túa tarxeta de crédito ao premer neste botón. Os pagos procésanse de forma segura a través de Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
