--- a/client/i18n/lang/ja.json
+++ b/client/i18n/lang/ja.json
@@ -39,6 +39,27 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "クリックしてカメラを開く"
+        },
+        "payment": {
+            "amount_to_pay": "支払額",
+            "success": "支払い成功",
+            "name_on_card": "カード名義",
+            "billing_email": "請求先メールアドレス",
+            "payment_disclaimer": "このボタンをクリックすると、クレジットカードに請求されます。支払いはStripeを通じて安全に処理されます。",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
