--- a/client/i18n/lang/jv.json
+++ b/client/i18n/lang/jv.json
@@ -39,6 +39,27 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "Klik kanggo nggawe kamera"
+        },
+        "payment": {
+            "amount_to_pay": "Jumlah sing kudu dibayar",
+            "success": "Pembayaran kasil",
+            "name_on_card": "Jeneng ing kertu",
+            "billing_email": "Alamat email tagihan",
+            "payment_disclaimer": "Kertu kredit sampeyan bakal dikenani biaya nalika ngeklik tombol iki. Pembayaran diproses kanthi aman liwat Stripe.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
