--- a/client/i18n/lang/mr.json
+++ b/client/i18n/lang/mr.json
@@ -39,6 +39,27 @@
         },
         "barcodeInput": {
             "clickToOpenCamera": "क्लिक करा कैमरा खोलण्यासाठी"
+        },
+        "payment": {
+            "amount_to_pay": "देय रक्कम",
+            "success": "पेमेंट यशस्वी",
+            "name_on_card": "कार्डवरील नाव",
+            "billing_email": "बिलिंग ईमेल पत्ता",
+            "payment_disclaimer": "या बटणावर क्लिक केल्यावर तुमच्या क्रेडिट कार्डमधून शुल्क आकारले जाईल. पेमेंट्स स्ट्राइपद्वारे सुरक्षितपणे प्रक्रिया केली जातात.",
+            "errors": {
+                "missingFormOrProvider": "Missing form slug or provider ID.",
+                "failedAccountDetails": "Failed to get Stripe account details.",
+                "setupError": "An error occurred during Stripe setup.",
+                "systemNotReady": "Payment system not ready. Please wait a moment and try again.",
+                "misconfigured": "Payment system misconfigured. Please refresh and try again.",
+                "notFullyReady": "Payment system not fully ready. Please refresh and try again.",
+                "paymentRequired": "Complete the payment before you can proceed.",
+                "nameRequired": "Card holder name is required.",
+                "emailRequired": "Billing email address is required.",
+                "invalidEmail": "Invalid billing email address.",
+                "failedIntent": "Failed to create payment intent.",
+                "processingFailed": "Payment processing failed."
+            }
         }
     }
 } 
